// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericLabel plural with multiple placeholder 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    We have 
  </span>
  <span
    className="tribe-editor__label--count"
  >
    3
  </span>
  <span
    className="tribe-editor__label--after"
  >
     items, more 
  </span>
</span>
`;

exports[`NumericLabel plural with placeholder 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    We have 
  </span>
  <span
    className="tribe-editor__label--count"
  >
    3
  </span>
  <span
    className="tribe-editor__label--after"
  >
     items
  </span>
</span>
`;

exports[`NumericLabel plural without placeholder 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    We have items
  </span>
  <span
    className="tribe-editor__label--count"
  >
    3
  </span>
</span>
`;

exports[`NumericLabel singular item with multiple placeholders 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    Just 
  </span>
  <span
    className="tribe-editor__label--count"
  >
    1
  </span>
  <span
    className="tribe-editor__label--after"
  >
     Item 
  </span>
</span>
`;

exports[`NumericLabel singular item with no placeholder 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    Just Item
  </span>
  <span
    className="tribe-editor__label--count"
  >
    1
  </span>
</span>
`;

exports[`NumericLabel singular item with placeholder 1`] = `
<span
  className="tribe-editor__label--numeric"
>
  <span
    className="tribe-editor__label--before"
  >
    Just 
  </span>
  <span
    className="tribe-editor__label--count"
  >
    1
  </span>
  <span
    className="tribe-editor__label--after"
  >
     Item
  </span>
</span>
`;
